# event_hex

./: .gitmodules  Cargo.toml  LICENSE-APACHE  README.md  README.ru.md  rust-analyzer.json
examples/web_example/: Cargo.toml  README_RU.md
examples/web_example/src/: main.rs
examples/web_example/src/adapters/configurations/: command_bus_config.rs  event_bus_config.rs  query_bus_config.rs  service_config.rs  settings.rs
examples/web_example/src/adapters/persistence/mongodb/projections/dto/: access_account_projection_dto.rs
examples/web_example/src/adapters/persistence/mongodb/projections/mapper/: access_account_projection_mapper.rs
examples/web_example/src/adapters/persistence/mongodb/projections/readers/: access_account_projection.rs
examples/web_example/src/adapters/persistence/mongodb/projections/writers/: access_account_projection.rs
examples/web_example/src/application/command/domain/identity/: commands.rs
examples/web_example/src/application/command/domain/identity/handler/: access_account_command_handler.rs
examples/web_example/src/application/event/domain/identity/handler/: access_account_handlers.rs
examples/web_example/src/application/query/handler/: mod.rs
examples/web_example/src/application/saga/service/: mod.rs
examples/web_example/src/application/service/: identity_service.rs
examples/web_example/src/domain/identity_access_management/: mod.rs
examples/web_example/src/domain/identity_access_management/identity/aggregate/: access_account.rs
examples/web_example/src/domain/identity_access_management/identity/aggregate/value_object/: account_vo.rs  email.rs
examples/web_example/src/domain/identity_access_management/identity/event/: access_account_events.rs
examples/web_example/src/domain/identity_access_management/identity/ports/read_repository_ports/: access_account_projection.rs
examples/web_example/src/domain/identity_access_management/identity/service/: access_account_domain_service.rs
examples/web_example/src/shared_kernel/: errors.rs
examples/web_example/src/shared_kernel/model/: common.rs
src/: auditable.rs  cqrs.rs  domain.rs  domain_event.rs  domain_event_handlers.rs  errors.rs  event_store_repository.rs  lib.rs  projection.rs  transaction.rs
src/application/ports/: cqrs.rs  domain_event_handlers.rs  event_store_repository.rs  mod.rs  transaction.rs
src/application/ports/projections/: projection.rs
src/bus/: mod.rs
src/bus/in_memory/: command_bus.rs  event_bus.rs  query_bus.rs
src/bus/ports/: command.rs  event.rs  mod.rs  query.rs
src/buses/: command_bus.rs  event_bus.rs  query_bus.rs
src/domain/: domain.rs  domain_event.rs  mod.rs
src/event_store/: mod.rs  repository.rs  storage.rs
src/event_store/mongodb/: event_store.rs
src/infrastructure/: mod.rs
src/infrastructure/event_store/: repository.rs  storage.rs
src/infrastructure/event_store/mongodb/: event_store.rs  mod.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/persistence/mongodb/: mod.rs  mongo_transaction.rs
src/infrastructure/persistence/mongodb/projections/dto/: access_account_projection_dto.rs  identity_projection_dto.rs  mod.rs  profile_projection_dto.rs
src/infrastructure/persistence/mongodb/projections/mapper/: access_account_projection_mapper.rs  identity_projection_mapper.rs  mod.rs  profile_projection_mapper.rs
src/infrastructure/persistence/mongodb/projections/readers/: access_account_projection.rs  identity_projection.rs  mod.rs  profile_projection.rs
src/infrastructure/persistence/mongodb/projections/writers/: access_account_projection.rs  identity_projection.rs  mod.rs  profile_projection.rs
src/persistence/: mod.rs  transaction.rs
src/persistence/mongodb/: mod.rs  mongo_transaction.rs
src/shared_kernel/: auditable.rs  domain.rs  domain_event.rs  errors.rs  mod.rs
src/shared_kernel/bus/in_memory/: command_bus.rs  event_bus.rs  query_bus.rs
