[package]
name = "web-example"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.93", features = [
    "salvo_extra",
    "jwt-auth",
    "logging",
    "request-id",
    "catch-panic",
    "matched-path",
    "affix-state",
    "oapi",
] }
tokio = { version = "1.52", features = ["full"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_with = { version = "3.18.0" }
typed-builder = "0.23.2"
derive-getters = "0.5.0"
anyhow = "1.0.102"
mongodb = { version = "3.6.0", features = ["bson-3"] }
async-trait = "0.1.89"
bson = { version = "3.1.0", features = ["uuid-1", "serde_with-3", "serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4", "fast-rng", "v7"] }
event_hex = { version = "0.0.3", path = "../..", features = ["mongo"] }
thiserror = "2.0.18"

[dev-dependencies]
mockall = "0.14"
